added lexer and parser

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="navHolder">
 	<nav>
 		<a class="selected" href="index.html">Home</a>
+		<a class="selected" href="lexerTest.html">Lexer</a>
 	</nav>
 </div>
 <main>
