--- a/lexerTest.html
+++ b/lexerTest.html
@@ -35,8 +35,9 @@
 <body>
 <div class="navHolder">
 	<nav>
-		<a class="selected" href="index.html">Home</a>
+		<a href="index.html">Calculator</a>
 		<a class="selected" href="lexerTest.html">Lexer</a>
+		<a href="parserTest.html">Parser</a>
 	</nav>
 </div>
 <main>
