--- a/parserTest.html
+++ b/parserTest.html
@@ -17,6 +17,21 @@
 		const output = document.getElementById('parseOutput');
 		output.innerHTML = '';
 		output.innerText = JSON.stringify(node);
+		if(parseErrors && parseErrors.length > 0){
+			output.appendChild(document.createElement('br'));
+			
+			const lbl = document.createElement('p');
+			lbl.innerText = 'Errors:';
+			output.appendChild(lbl);
+			
+			const list = document.createElement('ul');
+			for(let i = 0; i < parseErrors.length; i++){
+				const line = document.createElement('li');
+				line.innerText = parseErrors[i];
+				list.appendChild(line);
+			}
+			output.appendChild(list);
+		}
 	}
 	
 	window.addEventListener('DOMContentLoaded', () => {
@@ -32,8 +47,8 @@
 <body>
 <div class="navHolder">
 	<nav>
-		<a class="selected" href="index.html">Home</a>
-		<a class="selected" href="lexerTest.html">Lexer</a>
+		<a href="index.html">Calculator</a>
+		<a href="lexerTest.html">Lexer</a>
 		<a class="selected" href="parserTest.html">Parser</a>
 	</nav>
 </div>
