update on input readded

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			calc();
 		}
 	
-		//document.getElementById('calcInput').addEventListener('input', calc);
+		document.getElementById('calcInput').addEventListener('input', calc);
 		document.getElementById('numFormatSelect').addEventListener('change',calc);
 		document.getElementById('calcBtn').addEventListener('click',calc);
 	});
