--- a/lexerTest.html
+++ b/lexerTest.html
@@ -47,7 +47,7 @@
 		</header>
 		<section>
 			<p>Test the lexer here. Tokens will be printed below, but nothing will be done with them</p>
-			<input id="lexInput" type="text">
+			<input id="lexInput" type="text" autofocus>
 			<p id="lexOutput"></p>
 		</section>
 		<div class="scrollOverflow"></div>
