--- a/parserTest.html
+++ b/parserTest.html
@@ -57,7 +57,7 @@
 			<h1>Parser</h1>
 		</header>
 		<section>
-			<input id="parseInput" type="text">
+			<input id="parseInput" type="text" autofocus>
 			<pre id="parseOutput"></pre>
 		</section>
 		<div class="scrollOverflow"></div>
