added complex versions of some functions

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<tbody>
 					<tr>
 						<td>Abs</td>
-						<td><span class="num">Number</span> &#8594; <span class="num">Number</span></td>
+						<td><span class="num">Number</span>/<span class="complex">Complex</span> &#8594; <span class="num">Number</span></td>
 						<td>Takes the absolute value or magnitude</td>
 					</tr>
 					<tr>
@@ -236,7 +236,7 @@
 					</tr>
 					<tr>
 						<td>Ceiling</td>
-						<td><span class="num">Number</span> &#8594; <span class="num">Number</span></td>
+						<td><span class="num">Number</span>/<span class="complex">Complex</span> &#8594; <span class="num">Number</span>/<span class="complex">Complex</span></td>
 						<td>Rounds up to nearest whole integer</td>
 					</tr>
 					<tr>
@@ -246,7 +246,7 @@
 					</tr>
 					<tr>
 						<td>Floor</td>
-						<td><span class="num">Number</span> &#8594; <span class="num">Number</span></td>
+						<td><span class="num">Number</span>/<span class="complex">Complex</span> &#8594; <span class="num">Number</span>/<span class="complex">Complex</span></td>
 						<td>Rounds down to nearest whole integer</td>
 					</tr>
 					<tr>
