--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 				<option selected value="dec">Decimal</option>
 				<option value="bin">Binary 0b_</option>
 				<option value="hex">Hex 0x_</option>
-			</select><span id="formatWarning" class="warning"></span>
+			</select>
+			<div>
+				<input id="useRationalInput" type="checkbox"><label for="useRationalInput">Use Rational</label>
+			</div>
+			<span id="formatWarning" class="warning"></span>
 			<p id="calcOutput">&nbsp;</p>
 			<div class="calcHolder">
 				<input id="calcInput" type="text" placeholder="Equation..." autofocus>
@@ -44,6 +48,7 @@
 			<h2>Color Legend</h2>
 			<ul class="legend">
 				<li class="num">Number: Real numbers including integers and decimals, as well as special values like NaN, Infinity, and NegativeInfinity</li>
+				<li class="rational">Rational: Rational numbers represented as a fraction eg. 1/3</li>
 				<li class="bool">Boolean: True/False only</li>
 				<li class="complex">Complex: Numbers consisting of a real component and an imaginary component (denoted by i)</li>
 				<li class="error">Error: Issues causing the calculator to malfunction</li>
@@ -138,6 +143,11 @@
 						<td>Random</td>
 						<td><span class="num">Number</span>, <span class="num">Number</span> &#8594; <span class="num">Number</span></td>
 						<td>Random number between min(inclusive) and max(exclusive)</td>
+					</tr>
+					<tr>
+						<td>Rational</td>
+						<td><span class="num">Number</span>&#8594; <span class="rational">Rational</span></td>
+						<td>Attempts to convert and simplify a real number to a rational number</td>
 					</tr>
 					<tr>
 						<td>Round</td>
@@ -249,6 +259,182 @@
 			<p>Scientific notation is partially supported, within the limits of IEEE double precision floating point numbers.</p>
 			
 			<hr>
+
+			<h2>Operators</h2>
+			<p><strong>NOTE:</strong>Operator documentation is incomplete, mostly in regards to types. If in doubt, just try it!</p>
+			<h3>Unary Operators</h3>
+				<table>
+					<tr>
+						<th>Position</th>
+						<th>Op</th>
+						<th>Name</th>
+						<th>Types</th>
+						<th>Description</th>
+					</tr>
+					<tr>
+						<td>Prefix</td>
+						<th>+</th>
+						<td>Unary plus</td>
+						<td><span class="num">Number</span></td>
+						<td>Positive number. Doesn't really do anything</td>
+					</tr>
+					<tr>
+						<td>Prefix</td>
+						<th>-</th>
+						<td>Unary minus</td>
+						<td><span class="num">Number</span></td>
+						<td>Equivelent to * -1</td>
+					</tr>
+					<tr>
+						<td>Prefix</td>
+						<th>!, NOT</th>
+						<td>Unary NOT</td>
+						<td><span class="bool">Boolean</span>, <span class="num">Number</span></td>
+						<td>Inverts a boolean, and flips the bits on a number</td>
+					</tr>
+					<tr>
+						<td>Postfix</td>
+						<th>!</th>
+						<td>Factorial</td>
+						<td><span class="num">Number</span></td>
+						<td>Returns the factorial of an integer</td>
+					</tr>
+					<tr>
+						<td>Postfix</td>
+						<th>i</th>
+						<td>Imaginary</td>
+						<td><span class="num">Number</span></td>
+						<td>Marks a number as the 'imaginary' component of a <span class="complex">complex number</span>.</td>
+					</tr>
+				</table>
+			<h3>Binary Operators</h3>
+			<table>
+					<tr>
+						<th>Op</th>
+						<th>Name</th>
+						<th>Types</th>
+						<th>Description</th>
+					</tr>
+					<tr>
+						<th>+</th>
+						<td>Add</td>
+						<td><span class="num">Number</span></td>
+						<td>Adds the arguments</td>
+					</tr>
+					<tr>
+						<th>-</th>
+						<td>Subtract</td>
+						<td><span class="num">Number</span></td>
+						<td>Subtracts the rhs from the lhs</td>
+					</tr>
+					<tr>
+						<th>*</th>
+						<td>Multiply</td>
+						<td><span class="num">Number</span></td>
+						<td>Multiplies the arguments</td>
+					</tr>
+					<tr>
+						<th>/</th>
+						<td>Divide</td>
+						<td><span class="num">Number</span></td>
+						<td>Divides lhs by rhs. Produces <span class="rational">Rational</span> where possible</td>
+					</tr>
+					<tr>
+						<th>^</th>
+						<td>Power</td>
+						<td><span class="num">Number</span></td>
+						<td>Raises lhs to the rhs power</td>
+					</tr>
+					<tr>
+						<th>AND, &amp;, &amp;&amp;</th>
+						<td>AND</td>
+						<td><span class="bool">Boolean</span>, <span class="num">Number</span></td>
+						<td>AND between two booleans, or bitwise AND between two numbers</td>
+					</tr>
+					<tr>
+						<th>OR, ||</th>
+						<td>AND</td>
+						<td><span class="bool">Boolean</span>, <span class="num">Number</span></td>
+						<td>AND between two booleans, or bitwise AND between two numbers</td>
+					</tr>
+					<tr>
+						<th>XOR</th>
+						<td>XOR</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>MOD, %</th>
+						<td>Modulus</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>==, =</th>
+						<td>Equal</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>!=, &lt;&gt;</th>
+						<td>Not Equal</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>&lt;</th>
+						<td>Less than</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>&lt;=</th>
+						<td>Less than or equal to</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>&gt;</th>
+						<td>Greater than</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<th>&gt;=</th>
+						<td>Greater than or equal to</td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<h3>Special Operators</h3>
+				<table>
+					<tr>
+						<th>Op</th>
+						<th>Name</th>
+						<th>Types</th>
+						<th>Description</th>
+					</tr>
+					<tr>
+						<th>| |</th>
+						<td>Absolute</td>
+						<td><span class="num">Number</span></td>
+						<td>Returns the absolute of the number between the | <span class="num">Number</span> |</td>
+					</tr>
+					<tr>
+						<th>( )</th>
+						<td>Parentheses</td>
+						<td>ANY</td>
+						<td>Used for controling precedence</td>
+					</tr>
+					<tr>
+						<th>,</th>
+						<td>Comma</td>
+						<td>ANY</td>
+						<td>Used for separating arguments to a function</td>
+					</tr>
+				</table>
+			<hr>
+			
 			<p>To see how it's working under the hood, you can try out the lexer and parser components on their own:</p>
 			<h3><a href="lexerTest.html">Lexer</a></h3>
 			<h3><a href="parserTest.html">Parser</a></h3>
