Fixed OR binOp with parens throwing error

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 			<p id="calcOutput">&nbsp;</p>
 			<div class="calcHolder">
 				<input id="calcInput" type="text" placeholder="Equation..." autofocus>
-				<!--<button id="calcBtn" title="Equals"></button>-->
 			</div>
+			<!-- <div class="calcHolder">
+				<input id="varInput" type="text" placeholder="Variables..." autofocus>
+			</div> -->
 			<ul id="calcErrors" class="error"></ul>
 		</section>
 		<section>
